# BhavAI-Terminal-Edition

./: .env.example  .gitignore  CHANGELOG.md  LICENSE.md  README.md  WALKTHROUGH.md  faltu.txt  implementation_plan_for_git.md  pyproject.toml
bhavai/: __init__.py  agent.py  api.py  config.py  config_schema.py  context.py  llm.py  main.py  memory.py  modes.py  settings_router.py  skill_getter.py  skills_router.py  tools.py  tools_extended.py  tui.py
bhavai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bhavai/scripts/: initialize_markdown.py
bhavai/updater/: updates.py
calculator/: index.html  script.js  style.css
tests/: test_tools.py
